--- a/mvc/CI-Platform/CI-Platform-web/Views/Shared/_Layout.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Shared/_Layout.cshtml
@@ -1,9 +1,18 @@
 ﻿
 @{
-    var Id = ViewBag.Id;
+    //var Id = ViewBag.Id;
     var email = ViewBag.email;
     var Username = ViewBag.Username;
+
+    string UserId = ViewBag.UserId;
+    long Id = long.Parse(UserId);
+
 }
+
+<script>
+    var UserId = @Id;
+</script>
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -157,7 +166,7 @@
                                    data-bs-toggle="dropdown" aria-expanded="false">
                                     <img class="icon rounded-circle" src="~/images/user-img.png">
 
-                            @Username
+                            @Username @UserId
                                     <img src="~/images/drop-down.png">
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-light" aria-labelledby="navbarDarkDropdownMenuLink">
@@ -211,8 +220,8 @@
             crossorigin="anonymous"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="~/js/Filter.js" asp-append-version="true"></script>
-    <script src="~/js/fav.js" asp-append-version="true"></script>
-
+@*    <script src="~/js/fav.js" asp-append-version="true"></script>*@
+   
 </body>
 
 </html>
